[package]
name = "discordbot"
version = "0.1.0"
authors = ["powerconstruct"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
openssl = "0.10"
serde = {version = "1.0.125", features = ["derive"]}