[package]
name = "db_handler"
version = "0.1.0"
authors = ["u_dev <uddhavdave1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0.0-beta"
tokio = { version = "1.5", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
